[package]
name = "qtmon"
license = "MIT"
edition = "2018"
version = "0.1.0"
readme = "README.md"
authors = ["Curtis Jones <ikubetoomuzik@gmail.com>"]
homepage = "https://github.com/ikubetoomuzik/qtmon.git"
repository = "https://github.com/ikubetoomuzik/qtmon.git"
description = "An async monitor for the Questrade api, with its own small API server for your own projects."
exclude = [
  "files/*",
]

[features]
default = ["rustbreak/ron_enc"]
yaml = ["rustbreak/yaml_enc"]
bincode = ["rustbreak/bin_enc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flexi_logger = { version = "0.16", default_features = false, features = ["colors","compress"] }
log = "0.4"
futures = "0.3"
dirs = "3.0.1"
clap = "2.33.3"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
ron = "0.6"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
questrade-rs = "0.1"
reqwest = "0.10"
rustbreak = "2"
